# pyBlog

./: .coveragerc  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  TODO.md  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml
blog/: __init__.py  admin.py  apps.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/fixtures/: blog-data.json
blog/migrations/: 0001_base_migrations.py  0001_create_blog_model.py  0001_initial.py  0002_alter_comment_options.py  0002_blog_slug.py  0002_blog_user.py  0002_sitepreferences_twitter_site.py  0003_add_comments_model.py  0003_auto_20210908_1508.py  0003_auto_20220207_0945.py  0003_comment_guest_email.py  0004_add_extra_settings.py  0004_auto_20210923_1249.py  0004_auto_20211114_1629.py  0004_auto_20220207_1650.py  0005_alter_sitepreferences_options.py  0005_auto_20211115_1604.py  0005_comment_body_markdown.py  0005_series.py  0006_alter_comment_created_by_user.py  0006_alter_series_options.py  0006_redirect.py  0007_alter_blog_body.py  0007_series_description.py  0008_alter_comment_created_by_user.py  0009_tag.py  0010_auto_20211012_1409.py  0011_tag_posts.py  0012_alter_tag_posts.py  0013_alter_tag_posts.py  0014_auto_20211012_1553.py  0015_tag_slug.py  0016_blog_image.py  0017_alter_blog_image.py  0018_sitepreferences_pinned_post.py  0019_blog_draft.py  0020_alter_blog_body.py  0021_auto_20211026_1516.py
blog/static/blog/: site.css  site.js
blog/static/likes/includes/: likes_custom.js
blog/static/prism/: prism.css
blog/templates/: 403.html  404.html  503.html
blog/templates/blog/: _base.html  _footer.html  _head.html  _header.html  _maintenance_mode.html  _navbar.html  _noscript.html  _single_post_summary.html  blog_confirm_delete.html  blog_detail.html  blog_editpost.html  blog_newpost.html  blog_search.html  comment_confirm_delete.html  comment_editcomment.html  comment_newcomment.html  index.html  series_detail.html  series_list.html  tag_detail.html  tag_list.html
blog/templates/blog/common/: post_form.html
blog/templates/blog/sidebar/: sidebar.html  sidebar1.html  sidebar2.html  sidebar3.html  sidebar_admin.html  sidebar_popular.html  sidebar_recent.html  sidebar_rss.html  sidebar_search.html  sidebar_series.html  sidebar_tags.html  sidebar_user.html
blog/templates/blog/snippets/: image_meta.html
blog/templates/blog/widgets/: clearable_file_input.html
blog/templates/likes/inclusion_tags/: likes_blog.html
blog/templatetags/: __init__.py  blog_extras.py  markdown_extras.py
blog/tests/: test_blog.py  test_comment.py  test_index_class_view.py  test_tag.py
blog/views/: __init__.py  blog_views.py  comment_views.py  series_views.py  tag_views.py
myblog/: admin.py  apps.py  asgi.py  settings.py  urls.py  views.py
myblog/errors/: views.py
preferences/: __init__.py  admin.py  context_processors.py  managers.py  models.py
preferences/migrations/: 0001_initial.py
pyBlog/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
pyblog/: __init__.py  admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
pyblog/errors/: __init__.py  views.py
pyblog/widgets/: __init__.py  image.py
tests/: __init__.py
users/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  views.py
users/fixtures/: users-data.json
users/migrations/: 0001_initial.py  0002_alter_profile_image.py  0002_profile_bio.py  0003_add_social_media.py  0003_auto_20211228_1233.py  0004_profile_author.py
users/templates/users/: _base.html  edit-profile.html  login.html  logout.html  my_profile.html  profile.html  register.html  user-profile.html
users/tests/: test_profile.py
