[tool.poetry]
name = "pyblog"
version = "0.1.0"
description = "Python-Based (Django) Blog Engine"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/seapagan/pyBlog"

[tool.poetry.urls]
"Pull Requests" = "https://github.com/seapagan/pyBlog/pulls"
"Bug Tracker" = "https://github.com/seapagan/pyBlog/issues"
"Changelog" = "https://github.com/seapagan/pyBlog/blob/main/CHANGELOG.md"

#  ------------------------------- dependencies --------------------------------
[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
dj-pagination = { git = "https://github.com/seapagan/dj-pagination.git", rev = "master" }
django-ckeditor = "^6.7.0"
django-compressor = "^4.4"
django-gravatar2 = "^1.4.4"
django-likes = { git = "https://github.com/seapagan/django-likes.git", rev = "develop" }
django-maintenance-mode = "^0.19.0"
django-recaptcha = "^4.0.0"
django-rundevserver = "^0.3.1"
django-secretballot = "^2.0.0"
django-user-sessions = "^2.0.0"
django-xforwardedfor-middleware = "^2.0"
djangorestframework = "^3.14.0"
dj-hitcount = "^1.3.0"
geoip2 = "^4.7.0"
gunicorn = "^21.2.0"
pillow = "^10.2.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
# linting, type-checking and security checks
pre-commit = "^3.3.3"
pymarkdownlnt = "^0.9.12"
mypy = "^1.4.1"
ruff = "^0.3.4"

# task runner
poethepoet = ">=0.21.1,<0.25.0"

# testing
faker = ">=19.2,<25.0"
mock = "^5.1.0"
pyfakefs = "^5.3.5"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^4.0.0"
pytest-django = "^4.7.0"
pytest-mock = "^3.11.1"
pytest-randomly = "^3.13.0"
pytest-reverse = "^1.7.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.5.0"

# documentation
mkdocs = "^1.4.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-material = "^9.5.15"
mkdocs-minify-plugin = "^0.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
pymdown-extensions = "^10.7"
pygments = "^2.17.2"

# type stubs
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------- poe tasks ---------------------------------
[tool.poe.tasks]
# Run the Django development server
serve.cmd = "python manage.py runserver"
serve.help = "Run the Django development server"

# setup PoeThePoet tasks
pre.cmd = "pre-commit run --all-files"
pre.help = "Run pre-commit checks"
mypy.cmd = "mypy . --strict"
mypy.help = "Run mypy checks"
format.help = "Format code with Ruff"
format.cmd = "ruff format ."
ruff.help = "Run Ruff checks"
ruff.cmd = "ruff check ."
test.help = "Run tests using Pytest"
test.cmd = "pytest"
markdown.cmd = "pymarkdown scan  -r *.md"
markdown.help = "Run markdown checks"

# run all linting checks in sequence. we want to run them all, even if one fails
lint.ignore_fail = "return_non_zero"
lint.sequence = ["format", "ruff", "mypy", "markdown"]
lint.help = "Run all linting checks"

"docs:publish".cmd = "mkdocs gh-deploy"
"docs:publish".help = "Publish documentation to GitHub Pages"
"docs:build".cmd = "mkdocs build"
"docs:build".help = "Build documentation locally to './site' folder"
"docs:serve".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md"
"docs:serve".help = "Serve documentation locally"
"docs:serve:all".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md -a 0.0.0.0:8000"
"docs:serve:all".help = "Serve documentation locally on all interfaces"

changelog.cmd = "github-changelog-md"
changelog.help = "Generate the CHANGELOG.md file"

# -------------------- configure assorted tools and linters --------------------
[tool.pymarkdown]
plugins.md014.enabled = false
plugins.md036.enabled = false
plugins.md046.enabled = false

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report", "term-missing", "--cov-report", "html"]
filterwarnings = []
mock_use_standalone_module = true
pythonpath = ["blog", "pyBlog"]
DJANGO_SETTINGS_MODULE = "pyblog.settings"

[tool.coverage.run]
source = ["blog", "pyBlog"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 80
extend-exclude = [
  "migrations",
  "manage.py",
  "pyblog/settings.py",
  "preferences",        # third-party app
]

src = ["blog", "pyBlog", "tests"]
target-version = "py39"           # minimum python version supported

[tool.ruff.lint]
select = ["ALL"] # we are being very strict!
ignore = [
  "ANN101",
  "PGH003",
  "FBT002",
  "FBT003",
  "B006",
  "RUF012", # this is a big pita to enforce and doubtful usageg in Django
  "ANN",    # ignoring type errors for now. Django is a big PITA for this.
] # These rules are too strict even for us ðŸ˜
extend-ignore = ["COM812", "ISC001"] # these are ignored for ruff formatting

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
  "S101",   # we can (and MUST!) use 'assert' in test files.
  "ANN001", # annotations for fixtures are sometimes a pain for test files.
]

[tool.ruff.lint.isort]
known-first-party = ["blog", "pyblog", "users"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.9"
exclude = [
  "blog/migrations/",
  "manage.py",
  "pyblog/settings.py",
  "preferences/",
]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
disable_error_code = ["method-assign", "no-untyped-def", "attr-defined"]
module = "tests.*"

[tool.django-stubs]
django_settings_module = "pyblog.settings"
